# research

./: .gitignore  .markdownlint-cli2.jsonc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
labs/: __init__.py  anchor_kappa.py  api_client.py  cli.py  competitor_winloss.py  council.py  council_pointwise.py  council_seats.py  cron.sh  cuped.py  deliberation.py  delta_logger.py  distill_cost_report.py  distill_export.py  distill_judge_gate.py  dr_ope.py  judge_worker.py  labeled_corpus.py  linucb_refit.py  promotion_pipeline.py  pyproject.toml  replay_gate.py  reward_writer.py  savings_holdout.py  seat_caller.py  shrinkage.py  slack_heartbeat.py  spark_seat_budget.py  task_verifiability.py  thompson.py  variant_archive.py  verify_coverage.py  verify_harness.py
labs/ainfera_labs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
labs/eval-v2-results-full/: ruler_scores.csv  ruler_scores.json  ruler_scores_rescored.json
labs/eval_harness/: README.md  __init__.py  __main__.py  arms.py  config.py  cycle.py  gateway.py  judge.py  live_arms.py  loader.py  metrics.py  runner.py  snapshot.py  taskset.py
labs/eval_v2_ruler/: README.md  __init__.py  __main__.py  catalog.py  config.py  gateway.py  rescore.py  runner.py  scorer.py  taskset.py
labs/tests/: test_ainfera_seat_caller.py  test_anchor_kappa.py  test_cli_api.py  test_competitor_winloss.py  test_council.py  test_council_pointwise.py  test_council_seats.py  test_curated_integration_cycle.py  test_deliberation.py  test_distill_export.py  (+23 more)
(+25 files in other folders)
