[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainfera-labs"
version = "0.1.0"
description = "Ainfera Labs — verifiable-reward harness and benchmark CLI"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "httpx>=0.27",
]

[project.scripts]
ainfera-labs = "cli:main"

[tool.setuptools]
py-modules = [
    "anchor_kappa",
    "api_client",
    "cli",
    "competitor_winloss",
    "council",
    "council_pointwise",
    "council_seats",
    "cuped",
    "deliberation",
    "delta_logger",
    "distill_judge_gate",
    "dr_ope",
    "judge_worker",
    "labeled_corpus",
    "linucb_refit",
    "promotion_pipeline",
    "replay_gate",
    "reward_writer",
    "savings_holdout",
    "seat_caller",
    "shrinkage",
    "slack_heartbeat",
    "spark_seat_budget",
    "task_verifiability",
    "thompson",
    "variant_archive",
    "verify_harness",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
